# git-daily-reporter

./: .editorconfig  .gitignore  CONTRIBUTING.md  LICENSE  README.md  package-lock.json
apps/desktop/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
apps/desktop/scripts/: generate-ico.ps1  tauri-env.js  tauri.js
apps/desktop/src/: App.test.tsx  App.tsx  styles.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: commands.rs  main.rs
apps/desktop/src-tauri/src/db/: mod.rs  schema.sql  tests.rs
apps/desktop/src/features/about/: AboutPage.tsx
apps/desktop/src/features/accounts/: api.ts  types.ts
apps/desktop/src/features/credentials/: api.ts  list-api.ts  types.ts
apps/desktop/src/features/forms/: AccountForm.test.tsx  AccountForm.tsx  CredentialForm.tsx  FormsWorkspace.tsx  RepositoryForm.tsx
apps/desktop/src/features/i18n/: i18n.ts
apps/desktop/src/features/llm/: LLMSettingsForm.tsx  ProviderList.tsx  llm-client.ts  provider-api.ts  provider-presets.ts
apps/desktop/src/features/reports/: ReportHistory.tsx  ReportSummary.tsx  ReportsWorkspace.tsx  api.ts
apps/desktop/src/features/repositories/: api.ts  list-api.ts  types.ts
apps/desktop/src/features/schedules/: types.ts
apps/desktop/src/features/security/: SecurityShell.tsx  VaultContext.tsx  credential-summary.tsx  secure-store.ts
apps/desktop/src/lib/: errors.ts  tauri.ts
apps/desktop/src/scripts/: tauri-env.test.js
docs/: 实施计划.md  开发环境建议.md  方案设计.md  桌面端使用手册.md  版本执行计划.md  详细技术设计.md
prototypes/python-cli/: pyproject.toml
prototypes/python-cli/examples/: config.yaml
prototypes/python-cli/src/git_daily_reporter/: __init__.py  cli.py  collector.py  config.py  git_client.py  models.py  reporting.py  template_engine.py
prototypes/python-cli/templates/: daily_report.md.j2
prototypes/python-cli/tests/: test_cli.py  test_collector.py  test_config.py  test_reporting.py
(+8 files in other folders)
