[package]
name = "git-daily-reporter-desktop"
version = "0.1.0"
description = "Git Daily Reporter desktop app"
authors = ["qstdc"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.2", features = [] }

[dependencies]
rusqlite = { version = "0.32.1", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.0.6", features = [] }
tauri-plugin-stronghold = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
